--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -10,24 +10,15 @@
     <h2 class="my-4">Inscription</h2>
 
     {{ form_start(registrationForm) }}
+        {{ form_row(registrationForm.user_fields) }}
         {{ form_row(registrationForm.avatarFile, {
             label: 'Votre avatar'
         }) }}
-        {{ form_row(registrationForm.email) }}
         {{ form_row(registrationForm.plainPassword.first, {
             label: 'Mot de passe'
         }) }}
         {{ form_row(registrationForm.plainPassword.second, {
             label: 'Veuillez confirmer votre mot de passe'
-        }) }}
-        {{ form_row(registrationForm.firstname, {
-            label: 'Prénom'
-        }) }}
-        {{ form_row(registrationForm.lastname, {
-            label: 'Nom'
-        }) }}
-        {{ form_row(registrationForm.description, {
-            label: 'Veuillez vous décrire en quelques lignes'
         }) }}
         {{ form_row(registrationForm.agreeTerms, {
             label: "J'accepte les conditions de la plateforme"
