--- a/templates/user/details.html.twig
+++ b/templates/user/details.html.twig
@@ -12,6 +12,17 @@
         <p>Inscrit le {{ user.dateInscription | date('d/m/Y') }}</p>
         {% if user.description %}<p>{{ user.description }}</p>{% endif %}
     </div>
+    <div class="col-9">
+        {{ form_start(profile_form) }}
+            {{ form_row(profile_form.user_fields) }}
+            {{ form_row(profile_form.plainPassword.first, {
+                label: 'Mot de passe'
+            }) }}
+            {{ form_row(profile_form.plainPassword.second, {
+                label: 'Veuillez confirmer votre mot de passe'
+            }) }}
+        {{ form_end(profile_form) }}
+    </div>
 </section>
 <section>
     <ul>
