Added form to update user informations
Design correction

squash between 2 commits

--- a/templates/user/details.html.twig
+++ b/templates/user/details.html.twig
@@ -20,4 +20,7 @@
         {% endfor %}
     </ul>
 </section>
+<section>
+    <p><a class="btn btn-info" href="{{ path('profileUpdate', { id : user.id }) }}">Modifier l'utilisateur</a></p>
+</section>
 {% endblock %}
