--- a/templates/user/details.html.twig
+++ b/templates/user/details.html.twig
@@ -1,26 +1,42 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{ parent() }} Profil{% endblock %}
+{% block title %}
+    {{ parent() }}
+    Profil
+{% endblock %}
 
 {% block body %}
-<section class="row my-4 mb-3">
-    <div class="col-3">
-        <img class="img-fluid" src="{{ user.avatar ? vich_uploader_asset(user, 'avatarFile') : 'http://placehold.it/300x300' }}" alt="Avatar">
-    </div>
-    <div class="col-9">
-        <h2>{{ user.firstname }} {{ user.lastname }}</h2>
-        <p>Inscrit le {{ user.dateInscription | date('d/m/Y') }}</p>
-        {% if user.description %}<p>{{ user.description }}</p>{% endif %}
-    </div>
-</section>
-<section>
-    <ul>
-        {% for game in user.games %}
-            <li><a href="{{ path('game_details', { id: game.id }) }}">{{ game.name }}</a></li>
-        {% endfor %}
-    </ul>
-    {% if user == app.user %}
-        <a class="btn btn-success" href="{{ path('game_add') }}">Ajouter un jeu</a>
-    {% endif %}
-</section>
+    <section class="row my-4 mb-3">
+        <div class="col-3">
+            <img
+              alt="Avatar"
+              class="img-fluid"
+              src="{{ user.avatar
+                ? vich_uploader_asset(user, 'avatarFile')
+                : 'http://placehold.it/300x300'
+              }}">
+        </div>
+        <div class="col-9">
+            <h2>{{ user.firstname }} {{ user.lastname }}</h2>
+            <p>Inscrit le {{ user.dateInscription | date('d/m/Y') }}</p>
+            {% if user.description %}
+                <p>{{ user.description }}</p>
+            {% endif %}
+            <a href="/profile/update">
+                <button class="btn btn-primary">Mettre à jour</button>
+            </a>
+        </div>
+    </section>
+    <section>
+        <ul>
+            {% for game in user.games %}
+                <li>
+                    <a href="{{ path('game_details', { id: game.id }) }}">{{ game.name }}</a>
+                </li>
+            {% endfor %}
+        </ul>
+        {% if user == app.user %}
+            <a class="btn btn-success" href="{{ path('game_add') }}">Ajouter un jeu</a>
+        {% endif %}
+    </section>
 {% endblock %}
