:sparkles: fixed issue #4

--- a/templates/game/details.html.twig
+++ b/templates/game/details.html.twig
@@ -5,6 +5,10 @@
 {% block body %}
     <h1 class="my-4">{{ game.name }}</h1>
     <p>{{ game.description }}</p>
+    <p>Catégories :</p>
+    {% for g in game.categories %}
+        <p>{{ g.name }}</p>
+    {% endfor %}
     <a class="btn btn-success" href="{{ path('home') }}">Revenir à la page d'accueil</a>
     <a class="btn btn-info" href="{{ path('user_details', { id : game.user.id }) }}">Voir l'utilisateur du jeu</a>
 {% endblock %}
